# PyFD

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
datasets/kaggle_houses/: test.csv  train.csv
datasets/mushroom/: data.csv
docs/: api.rst  conf.py  decomp.rst  fd_trees.rst  features.rst  index.rst  plots.rst  shapley.rst  tutorials.rst
pyfd/: __init__.py  data.py  decompositions.py  extrapolation.py  fd_trees.py  features.py  plots.py  shapley.py  utils.py
pyfd/datasets/COMPAS/: compas-scores-two-years-violent.csv
pyfd/tree_shap/: leaf_treeshap.hpp  main.cpp  progressbar.hpp  recursive_treeshap.hpp  stack_treeshap.hpp  utils.hpp  waterfall_treeshap.hpp
tests/unittest/: test_decomp.py  test_ebm.py  test_features.py  test_linear.py  test_tree_decomp.py  test_treeshap.py  utils.py
tests/visual/: test_bar_plot.py  test_extrapolation.py  test_linear_attribution.py  test_linear_basis.py  test_pdp_plot_num.py  test_scatter_plot_num.py  test_splines_attribution.py
tutorials/: 1-1-PyFD-Introduction.ipynb  1-2-Regression-Introduction.ipynb  1-2-Regression-introduction.ipynb  1-3-Classification-Introduction.ipynb  2-1-Explain-Additive-Models.ipynb  2-1-Explain-Linear-Models.ipynb  2-2-Explain-Parametric-Additive-Models.ipynb  2-3-Explain-NonParametric-Additive-Models.ipynb  2-4-Explain-Linear-Categorical-Features.ipynb  4-1-FDTrees.ipynb  4-2-FDTrees.ipynb  README.md  custom_ale.py  fd_tree_intro_1.py  fd_tree_intro_2.py  gbt_bikesharing.py  gbt_marketing.py  invariance_linear_models.py  linear_adult_income.py  splines_bikesharing.py
(+1 files in other folders)
