[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfd"
authors = [
    {name = "Gabriel Laberge", email = "gabriel.laberge@polymtl.ca"},
]
description = "Functional Decompositions of Black-Boxes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  'graphviz',
  'numpy',
  'matplotlib',
  'scikit-learn>=1.0',
  'pandas',
  'tqdm>=4.27.0',
  'shap',
  'xgboost',
  'interpret-core'
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  'sphinx',
  'nbsphinx',
  'ipywidgets'
]

[tool.setuptools]
packages = [
  "pyfd",
  "pyfd.tree_shap"
]

[tool.setuptools.dynamic]
version = {attr = "pyfd.__version__"}
